fixed the gap between portlet-header and content in IE
svn path=/plonetheme.sunburst/trunk/; revision=29866

--- a/plonetheme/sunburst/skins/plonetheme_sunburst_styles/IEFixes.css
+++ b/plonetheme/sunburst/skins/plonetheme_sunburst_styles/IEFixes.css
@@ -1,3 +1,5 @@
-.portletHeader {
+.portletHeader,
+#portal-header {
     height: 1%;
 }
+
